--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -2,12 +2,12 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="clientes">
-      <ion-icon name="triangle"></ion-icon>
+      <ion-icon name="people-circle-outline"></ion-icon>
       <ion-label>Clientes</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="pagos">
-      <ion-icon name="ellipse"></ion-icon>
+      <ion-icon src="./assets/dollar-sign-solid.svg"></ion-icon>
       <ion-label>Pagos</ion-label>
     </ion-tab-button>
 
