Diseño estilo iOS

--- a/src/app/pages/clientes/clientes.page.html
+++ b/src/app/pages/clientes/clientes.page.html
@@ -1,19 +1,19 @@
 <ion-header mode="ios">
-  <ion-toolbar >
-    <ion-title>
+  <ion-toolbar>
+    <ion-title class="">
       Clientes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
 
   <!-- Searchbar with cancel button never shown -->
   <ion-searchbar mode="ios" placeholder="Buscar" showCancelButton="never"></ion-searchbar>
 
 
   <!-- List of Text Items -->
-  <ion-list>
+  <ion-list mode="ios">
     <ion-item button detail>
       <ion-avatar slot="start">
         <img src="./assets/avatars/Elliot.png" />
