--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -1,1 +1,15 @@
 
+ion-icon.people {
+    font-size: 36px;
+}
+ion-icon.dollar {
+    font-size: 30px;
+}
+
+ion-tab-bar {
+    height: 65px;
+}
+
+ion-label {
+    font-size: 13px;
+} 
