--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,7 @@ div.searchbar-input-container.sc-ion-searchbar-ios {
 .fab-horizontal-end{
     right: calc(20px + var(--ion-safe-area-right, 0px));
 }
+
+.text-danger {
+    color: #dc3545!important
+}
