--- a/src/app/pages/clientes/clientes.page.html
+++ b/src/app/pages/clientes/clientes.page.html
@@ -43,7 +43,7 @@
       </ion-label>
     </ion-item>
 
-    <ion-item button detail *ngFor="let cliente of clienteService.clientes">
+    <ion-item button detail *ngFor="let cliente of clienteService.clientes" (click)="verDetalle(cliente)">
       <ion-avatar slot="start">
         <img [src]="cliente.foto ? cliente.foto : './assets/avatars/FotoCamara.png'" />
       </ion-avatar>
