--- a/src/app/pages/pagos/pagos.page.html
+++ b/src/app/pages/pagos/pagos.page.html
@@ -1,11 +1,29 @@
 <ion-header mode="ios">
   <ion-toolbar>
-    <ion-title>
-      Pagos
-    </ion-title>
+    <ion-title>Historial de Pagos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div *ngFor="let grupo of pagosAgrupados">
+    <ion-list-header mode="ios">
+      <ion-label>{{ grupo.fecha }}</ion-label>
+    </ion-list-header>
 
+    <ion-list mode="ios" class="inset-list">
+      <ion-item *ngFor="let pago of grupo.pagos">
+        <ion-label>
+          <h2>{{ pago.nombreCliente }}</h2>
+          <p>{{ pago.concepto }}</p>
+        </ion-label>
+        <ion-note slot="end" color="success" class="monto-pago">
+          + {{ pago.monto | currency }}
+        </ion-note>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <div class="ion-padding ion-text-center" *ngIf="pagosAgrupados.length === 0">
+    <ion-label color="medium">No hay pagos registrados aún</ion-label>
+  </div>
 </ion-content>
