--- a/src/app/pages/clientes/clientes.page.html
+++ b/src/app/pages/clientes/clientes.page.html
@@ -43,15 +43,23 @@
       </ion-label>
     </ion-item>
 
-    <ion-item button detail *ngFor="let cliente of clienteService.clientes" (click)="verDetalle(cliente)">
-      <ion-avatar slot="start">
-        <img [src]="cliente.foto ? cliente.foto : './assets/avatars/FotoCamara.png'" />
-      </ion-avatar>
-      <ion-label>
-        <h2>{{ cliente.nombre }} {{ cliente.apellido }}</h2>
-        <h5 class="primary">Cliente agregado</h5>
-      </ion-label>
-    </ion-item>
+    <ion-item-sliding *ngFor="let cliente of clienteService.clientes">
+      <ion-item button detail (click)="verDetalle(cliente)">
+        <ion-avatar slot="start">
+          <img [src]="cliente.foto ? cliente.foto : './assets/avatars/FotoCamara.png'" />
+        </ion-avatar>
+        <ion-label>
+          <h2>{{ cliente.nombre }} {{ cliente.apellido }}</h2>
+          <h5 class="primary">Cliente agregado</h5>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="confirmarEliminar(cliente)">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 
 
