--- a/src/app/pages/clientes/clientes.page.html
+++ b/src/app/pages/clientes/clientes.page.html
@@ -14,34 +14,6 @@
 
   <!-- List of Text Items -->
   <ion-list mode="ios">
-    <ion-item button detail>
-      <ion-avatar slot="start">
-        <img src="./assets/avatars/Elliot.png" />
-      </ion-avatar>
-      <ion-label>
-        <h2>Elliot Graf</h2>
-        <!-- <h5 [ngClass]="Condition ? 'className' : Condition ? 'className' : Condition ? 'className' : 'defaultclassName'">Pago atrasado</h5> -->
-        <h5 class="danger">Pago atrasado</h5>
-      </ion-label>
-    </ion-item>
-    <ion-item button detail>
-      <ion-avatar slot="start">
-        <img src="./assets/avatars/Erick.png" />
-      </ion-avatar>
-      <ion-label>
-        <h2>Erick Cowell</h2>
-        <h5 class="warning">Pago pendiente</h5>
-      </ion-label>
-    </ion-item>
-    <ion-item button detail>
-      <ion-avatar slot="start">
-        <img src="./assets/avatars/Andols.png" />
-      </ion-avatar>
-      <ion-label>
-        <h2>Andols Hamrick</h2>
-        <h5 class="success">Al corriente</h5>
-      </ion-label>
-    </ion-item>
 
     <ion-item-sliding *ngFor="let cliente of clienteService.clientes">
       <ion-item button detail (click)="verDetalle(cliente)">
@@ -50,7 +22,9 @@
         </ion-avatar>
         <ion-label>
           <h2>{{ cliente.nombre }} {{ cliente.apellido }}</h2>
-          <h5 class="primary">Cliente agregado</h5>
+          <h5 [class]="clienteService.getEstadoCliente(cliente.id).clase">
+            {{ clienteService.getEstadoCliente(cliente.id).texto }}
+          </h5>
         </ion-label>
       </ion-item>
 
