feat: Normalize phone number input by changing type to 'tel' and cleaning spaces before saving.
Closes #3

--- a/src/app/pages/editar-cliente/editar-cliente.page.html
+++ b/src/app/pages/editar-cliente/editar-cliente.page.html
@@ -32,7 +32,7 @@
     </ion-item>
     <ion-item lines="inset">
       <ion-label position="fixed">Número</ion-label>
-      <ion-input name="telefono" type="number" [(ngModel)]="cliente.telefono"></ion-input>
+      <ion-input name="telefono" type="tel" [(ngModel)]="cliente.telefono"></ion-input>
     </ion-item>
     <ion-item lines="inset">
       <ion-label position="fixed">Correo</ion-label>
